# TAMU-Shell-ECO-Marathon

./: GEMINI.md  dashboard.py
.claude/: settings.local.json
DIS/device/: LED.py  display.py  freespace.py  hardware.py  logger.py  main.py  menu.py  performance.py  race_manager.py  uart_manager.py  vehicle_state.py  writer.py
DIS/device/fonts/: TAM_logo.py  font_digits_45.py
Motor_Code/: easycontroller_debug.c
docs/: competition_features.md
easycontroller_refactor/: .gitignore  CMakeLists.txt  UART.c  UART.h  easycontroller_refactored.c  motor_control.c  motor_control.h  motor_hw.c  motor_hw.h  motor_pins.c  motor_pins.h  motor_state.c  motor_state.h  motor_user_config.c  motor_user_config.h  pico_sdk_import.cmake
easycontroller_refactor/.claude/: settings.local.json
